User authentication completed successfully

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html>
@@ -9,6 +10,27 @@
     <body>
         <div id="header">
             <span class="logo">Bookmarks</span>
+            {% if request.user.is_authenticated %}
+                <ul class="menu">
+                    <li {% if section == 'dashboard' %} class="selected"{% endif %}>
+                        <a href="{% url "dashboard" %}">My Dashboard </a>
+                    </li>
+                    <li {% if section == 'images' %}class="selected"{% endif %}>
+                        <a href="#">Images</a>
+                    </li>
+                    <li {% if section == 'people' %}class="selected"{% endif %}>
+                        <a href="#">People</a>
+                    <li>
+                </ul>
+            {% endif %}
+            <span class="user">
+                {% if request.user.is_authenticated%}
+                    Hello {{ request.user.first_name|default:request.user.username }},
+                    <a href="{% url 'logout' %}">logout</a>
+                {% else %}
+                    <a href="{% url "login" %}">Log-In</a>
+                {% endif %}
+            </span>
         </div>
         <div id="content">
             {% block content %}
