--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
+
+{% load static %}
 {% load crispy_forms_tags %}
- 
+
 {% block title %}Log-In{% endblock title %}
 
 {% block content %}
