--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,7 +7,10 @@
 
 {% block content %}
     <h1>Log-In</h1>
-    <p>Please, use the following form to log-in:</p>
+    <p>
+        Please, use the following form to log-in:
+        If you don't have an account <a href="{% url "register" %}">register here</a>.
+    </p>
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
